fix: changed modal width to align with the search

--- a/client/src/components/features/results/ResultModal1.module.css
+++ b/client/src/components/features/results/ResultModal1.module.css
@@ -6,7 +6,7 @@
 
 .resultModal {
   height: 567px;
-  width: 435px;
+  width: 456px;
   background-color: var(--white);
   border-radius: 40px;
   border: 1px solid var(--grey200);
